tests/typechecker/pass/015-max.hyg
(max(0, 1)): int;
(max(12.1f, 1.2f)): float