tests/typechecker/fail/015-max.hyg
(max("1", "2")): string